# cookiecutter-django-boundcorp

./: .coveragerc  .envrc  .gitattributes  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  clean-demo-project.sh  cookiecutter.json  create-demo-project.sh  create-test-project.sh  kubeconfig-sa.production.secrets.yaml
backend/apps/: schema.py
backend/apps/common/: graphql_helpers.py
backend/settings/: react_view.py  test_settings.py
backend/templates/: react_template.html
compose/: dev.yml  production.yml
deploy/chart/: Chart.yaml  values.yaml
docs/: adding-telemetry.md  k8s-ci-deployment.md  migrating-django-apps.md
{{cookiecutter.ci_project_name}}/: .coveragerc  .envrc  .gitignore  .gitlab-ci.yml  .secrets.env  Dockerfile  Makefile  Pipfile  README.md  conftest.py  manage.py  pytest.ini  requirements.freeze.txt  setup.cfg  wsgi.py
{{cookiecutter.ci_project_name}}/compose/: Caddyfile  build.yml  dev.yml  production.yml
{{cookiecutter.ci_project_name}}/frontend/: .gitignore  .graphqlconfig  codegen.yml  package.json
{{cookiecutter.ci_project_name}}/{{cookiecutter.ci_project_name}}/: __init__.py
{{cookiecutter.ci_project_title}}/: Pipfile
{{cookiecutter.project_name}}/: .coveragerc  .envrc  .gitignore  .secrets.env  .sops.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  helm-values.production.secrets.yaml  helm-values.staging.secrets.yaml  manage.py  pyproject.toml  schema.graphql  wsgi.py
{{cookiecutter.project_name}}/.github/workflows/: build.yml  ci.yml  deploy-production.yml  deploy-staging.yml  sync-grafana-dashboards.yml  test.yml
{{cookiecutter.project_name}}/docs/dashboards/: {{cookiecutter.project_name}}-overview.json  {{cookiecutter.project_name}}-workers.json
{{cookiecutter.project_name}}/frontend/: codegen.yml  index.html  package-lock.json  package.json  vite.config.ts
{{cookiecutter.project_name}}/frontend/src/: App.tsx
{{cookiecutter.project_name}}/infra/common/: .env  compose.yml
{{cookiecutter.project_name}}/infra/dev/: .env  Caddyfile  compose.yml  entrypoint.sh  garage.toml  start-runserver.sh
{{cookiecutter.project_name}}/infra/prod/: README.md  start-celery-beat.sh  start-celery-worker.sh  start-uvicorn.sh
{{cookiecutter.project_name}}/infra/prod/cluster/: github-pull-secret.secrets.yaml  install-postgres.sh  install_gitlab_pull_secret.sh
{{cookiecutter.project_name}}/scripts/: install_grafana_sa_secret.sh  sync_grafana_dashboards.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  celery.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/api/: __init__.py  auth.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/api/tests/: test_api.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/users/: admin.py  models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/users/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/users/tests/: test_profile.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/observability/: __init__.py  celery.py  metrics.py  middleware.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: project.py  test_settings.py  test_settings_aio.py  urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/: admin.py  models.py  tasks.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/services/: storage.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/views/: __init__.py  health.py
(+77 files in other folders)
