[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
packages = [
    { include = "{{cookiecutter.project_name}}" },
]
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
django-environ = "*"
django-cors-headers = "*"
django-ninja = "*"
django-ninja-jwt = "*"
django-extensions = "*"
django-filter = "*"
django-storages = {extras = ["s3"], version = "*"}
celery = {extras = ["redis"], version = "*"}
pgserver = "*"
psycopg = {extras = ["binary"], version = "*"}
uvicorn = "*"
whitenoise = "*"
pydantic = "*"
pytz = "*"
requests = "*"
prometheus-client = "*"
xhtml2pdf = ">=0.2.13"
factory-boy = "*"
ruff = "*"
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"{{cookiecutter.project_name}}/settings/*.py" = ["E402", "F403", "F405"]
"{{cookiecutter.project_name}}/api/__init__.py" = ["E402"]
"**/tests.py" = ["E402"]
"**/tests/*.py" = ["E402"]
"{{cookiecutter.project_name}}/utils/*.py" = ["E402", "UP031"]
"{{cookiecutter.project_name}}/utils/**/*.py" = ["UP031"]

[tool.mypy]
files = ["{{cookiecutter.project_name}}"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{cookiecutter.project_name}}.settings.test_settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--ds={{cookiecutter.project_name}}.settings.test_settings"
